REFACTOR: 增强代码健壮性与线程安全
- 新增 MessageEnum 统一管理系统消息字符串，消除硬编码
- 新增两个 RuntimeException 子类，提供更灵活的错误处理
- 调整大部分方法实现，确保线程安全
- 新增字符串占位符替换工具类
- 将 XicePlayer 类的部分方法改为异步执行